layouts/partials: Update header to support Hugo menus
The current stable version allows to define menus, hence it's isn't
needed it anymore to define them in the site parameters dictionary.

This commit changes the header to use the Hugo menus for the general
right side menu and adjust the example site to use the Hugo menus to
show that the header changes work as expected.

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -17,13 +17,13 @@ body_is_markdown = true
 #custom_sass = "bar.scss"
 #images = ["path_to_social_image_for_link_previews.jpg"]
 
-[[params.menu.main]]
-url = '/'
-title = "Home"
+[[menus.main]]
+pageRef = '/'
+name = "Home"
 
-[[params.menu.main]]
-url = '/posts/'
-title = "Posts"
+[[menus.main]]
+pageRef = '/posts/'
+name = "Posts"
 
 [taxonomies]
     tag = "tags"
